--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="C:\Users\HOME\Desktop\Ragul-min.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="Ragul-min.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>Ragul S</h1>
             <p>I am a Student</p>
         </div>
